Added all entities and repos with testing of added JPA